@@ -214,6 +214,8 @@ PIG-3013: BinInterSedes improve chararray sort performance (rohini)
 
 BUG FIXES
 
+PIG-3435: Custom Partitioner not working with MultiQueryOptimizer (knoguchi via daijy)
+
 PIG-3385: DISTINCT no longer uses custom partitioner (knoguchi via daijy)
 
 PIG-3379: Alias reuse in nested foreach causes PIG script to fail (xuefuz via daijy)
